--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,231 @@
-.App {
-  text-align: center;
+/* http://meyerweb.com/eric/tools/css/reset/ 
+   v2.0 | 20110126
+   License: none (public domain)
+*/
+
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
+  display: block;
+}
+body {
+  line-height: 1;
+}
+ol,
+ul {
+  list-style: none;
+}
+blockquote,
+q {
+  quotes: none;
+}
+blockquote:before,
+blockquote:after,
+q:before,
+q:after {
+  content: "";
+  content: none;
+}
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+/* start */
+
+* {
+  box-sizing: border-box;
+  text-decoration: none;
+  padding: 0;
+  margin: 0;
+  max-width: 100%;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+html {
+  font-size: 62.5%;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+body {
+  font-family: sans-serif, serif;
+  line-height: 1.5;
+  font-size: 1.6rem;
+  background-color: #fbfffb;
+  color: black;
+}
+
+h1 {
+  font-size: 3rem;
+}
+
+.navHead {
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  flex-flow: column nowrap;
+  border: pink 1px solid;
+  padding: 2rem;
+}
+
+.navigator {
+  display: flex;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  flex-wrap: nowrap;
+  border: 1px black solid;
+}
+
+.links {
+  border: orange 1px solid;
+  padding: 0 3rem 0 3rem;
+  font-weight: bold;
+  text-decoration: none;
+}
+
+.introMain {
+  display: flex;
+  justify-content: space-between;
+  border: red 1px solid;
+}
+
+.introLeft {
+  border: blue 1px solid;
+  flex: 0 1 auto;
+  padding: 10rem;
+}
+
+.introRight {
+  display: flex;
+  flex-flow: column nowrap;
+  align-content: space-between;
+  border: green 1px solid;
+  flex: 0 1 auto;
+  padding: 2rem;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.introButton {
+  padding: 0.5rem;
+  font-weight: bold;
+}
+
+.projects {
+  display: flex;
+  flex-flow: row wrap;
+}
+
+.link {
+  font-weight: bold;
+  font-size: 1.8rem;
   color: white;
+  width: 18rem;
+  height: 18rem;
+  cursor: pointer;
+  display: flex;
+  text-align: center;
+  align-items: center;
+  margin: 5rem;
+  padding: 2rem;
+  border-radius: 10px;
+  overflow: auto;
+  overflow-wrap: break-word;
+  hyphens: auto;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+#crypto {
+  background-color: burlywood;
 }
