--- a/src/App.css
+++ b/src/App.css
@@ -212,6 +212,14 @@ h2 {
   font-weight: bold;
 }
 
+.contact {
+  padding: 2rem;
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: center;
+  align-items: center;
+}
+
 .projects {
   display: flex;
   flex-flow: row wrap;
